--- a/src/_includes/sections/reviews.njk
+++ b/src/_includes/sections/reviews.njk
@@ -1,6 +1,6 @@
 <!-- REVIEWS -->
 <section class="py-24 ~px-4/8 bg-white dark:bg-stone-900">
-    <div class="container m-auto flex max-xl:flex-col gap-16">
+    <div class="container m-auto flex max-2xl:flex-col gap-16">
         <!-- TEXT + CTA -->
         <div class="xl:shrink-0 flex flex-col items-start gap-8">
             <!-- HEADING + TEXT -->
@@ -19,7 +19,7 @@
         </div>
 
         <!-- REVIEWS -->
-        <ul class="grid grid-cols-1 xl:grid-cols-3 ~gap-4/6">
+        <ul class="grid grid-cols-1 lg:grid-cols-3 ~gap-4/6">
             {% for item in reviews.items %}
                 <li class="flex flex-col items-center gap-12 py-12 px-8 bg-background rounded-3xl">
                     <!-- PHOTO -->
