--- a/src/_includes/pages/contact.njk
+++ b/src/_includes/pages/contact.njk
@@ -4,7 +4,120 @@
     {% include "sections/landing.njk" %}
 
     <!-- CONTACT -->
-    <section class="py-24 ~px-4/8">
-        <div class="container m-auto"></div>
+    <section class="py-24 ~px-4/8 bg-white dark:bg-stone-950">
+        <div class="container m-auto flex flex-col gap-12">
+            <!-- TOPPER + HEADING -->
+            <div class="flex flex-col items-center gap-2">
+                <span class="topper">{{ contentOne.topper }}</span>
+                <h2 class="max-w-lg text-center ~text-3xl/5xl text-black dark:text-white font-bold !leading-[1.1]">{{ contentOne.heading }}</h2>
+            </div>
+
+            <!-- CONTACT INFO + FORM -->
+            <div class="flex max-xl:flex-col ~gap-12/24">
+                <!-- CONTACT INFO -->
+                <div class="basis-1/2 flex flex-col gap-6">
+                    <!-- IMAGE -->
+                    <picture>
+                        <!-- MOBILE IMAGE -->
+                        <source media="(max-width: 600px)" srcset="{% getUrl contentOne.imageUrl | resize({ width: 736, height: 490, position: 'top' }) | avif %}" type="image/avif">
+                        <source media="(max-width: 600px)" srcset="{% getUrl contentOne.imageUrl | resize({ width: 736, height: 490, position: 'top' }) | webp %}" type="image/webp">
+                        <source media="(max-width: 600px)" srcset="{% getUrl contentOne.imageUrl | resize({ width: 736, height: 490, position: 'top' }) | jpeg %}" type="image/jpeg">
+                        <!-- DESKTOP IMAGE -->
+                        <source media="(min-width: 600px)" srcset="{% getUrl contentOne.imageUrl | resize({ width: 1536, height: 768, position: 'top' }) | avif %}" type="image/avif">
+                        <source media="(min-width: 600px)" srcset="{% getUrl contentOne.imageUrl | resize({ width: 1536, height: 768, position: 'top' }) | webp %}" type="image/webp">
+                        <source media="(min-width: 600px)" srcset="{% getUrl contentOne.imageUrl | resize({ width: 1536, height: 768, position: 'top' }) | jpeg %}" type="image/jpeg">
+                        <img
+                            class="object-cover w-full aspect-[3/2] sm:aspect-[2/1] rounded-4xl"
+                            src="{% getUrl contentOne.imageUrl | resize({ width: 1536, height: 768, position: 'top' }) | jpeg %}"
+                            alt="{{ contentOne.imageAlt }}"
+                            width="768"
+                            height="384"
+                            loading="lazy"
+                            decoding="async"
+                            aria-hidden="true"
+                            draggable="false">
+                    </picture>
+
+                    <p class="xl:max-w-3xl ~text-sm/base text-stone-800 dark:text-stone-200">{{ contentOne.text }}</p>
+
+                    <!-- EMAIL + PHONE -->
+                    <ul class="flex max-sm:flex-col ~gap-4/12">
+                        {% for item in contentOne.items %}
+                            <li class="flex items-center gap-4">
+                                <!-- ICON -->
+                                <div class="shrink-0 p-3 bg-background rounded-xl">
+                                    <img
+                                        class="~h-7/8 ~w-7/8"
+                                        src="{{ item.iconUrl }}"
+                                        alt="{{ item.iconAlt }}"
+                                        width="30"
+                                        height="30"
+                                        loading="lazy"
+                                        decoding="async"
+                                        aria-hidden="true"
+                                        draggable="false">
+                                </div>
+
+                                <div class="flex flex-col gap-0.5">
+                                    <span class="~text-sm/base text-stone-800 dark:text-stone-200 font-medium">{{ item.title }}</span>
+                                    <a
+                                        href="{{ item.href }}"
+                                        class="relative ~text-base/lg text-black dark:text-white font-medium
+                                        before:absolute before:-bottom-0.5 before:left-0 before:h-0.5 before:w-full before:bg-black
+                                        before:transition-transform before:duration-300 before:scale-x-0 before:origin-left hover:before:scale-x-100">
+                                        {{ item.text }}
+                                    </a>
+                                </div>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+
+                <!-- CONTACT FORM -->
+                <form class="basis-1/2 flex flex-col gap-4" method="POST" name="Kontaktní formulář" netlify-honeypot="bot-field" netlify>
+                    <fieldset class="grid grid-cols-1 gap-6">
+                        <!-- HONEYPOT -->
+                        <input class="sr-only" type="search" name="bot-field" tabindex="-1" autocomplete="off" spellcheck="false" autocorrect="off" autocapitalize="off" placeholder="Leave this empty">
+
+                        <!-- FULLNAME -->
+                        <label class="flex flex-col gap-2 dark:text-white font-semibold">
+                            {{ contentOne.form.name }}
+                            <input class="input" type="text" name="Jméno" autocomplete="name" required>
+                        </label>
+
+                        <!-- EMAIL -->
+                        <label class="flex flex-col gap-2 dark:text-white font-semibold">
+                            {{ contentOne.form.email }}
+                            <input class="input" type="email" name="Email" autocomplete="email" required>
+                        </label>
+
+                        <!-- PHONE -->
+                        <label class="flex flex-col gap-2 dark:text-white font-semibold">
+                            {{ contentOne.form.telephone }}
+                            <input class="input" type="tel" name="Telefon" autocomplete="tel" required>
+                        </label>
+                    </fieldset>
+
+                    <!-- MESSAGE -->
+                    <label class="flex flex-col gap-2 dark:text-white font-semibold">
+                        {{ contentOne.form.message }}
+                        <textarea class="input min-h-[6lh] max-h-[30lh]" name="Zpráva" required></textarea>
+                    </label>
+
+                    <!-- SUBMIT -->
+                    <button type="submit" class="btn">{{ contentOne.form.submit }}</button>
+
+                    <!-- PRIVACY POLICY -->
+                    <p class="~text-xs/sm text-center text-stone-800 dark:text-stone-200">
+                        {{ contentOne.form.submitDisclaimer }}
+                        <a href="/gdpr" class="underline hover:text-black dark:hover:text-white">{{ contentOne.form.privacyPolicy }}</a>
+                    </p>
+                </form>
+            </div>
+        </div>
     </section>
+
+    {% include "sections/our-team.njk" %}
+    {% include "sections/locations.njk" %}
+    {% include "sections/reviews.njk" %}
 {% endblock body %}
