--- a/src/_includes/sections/header.njk
+++ b/src/_includes/sections/header.njk
@@ -1,10 +1,10 @@
 <header 
   class="py-2 ~px-4/8 fixed flex w-full z-50 before:absolute before:top-0 before:left-0 before:h-full before:w-full before:bg-background/80 before:border-b-2 before:border-secondary
-  before:shadow-md before:-z-10 before:transition-transform before:duration-300 before:scale-y-0 before:origin-top group-[.scroll]/body:before:scale-y-100"
+  before:shadow-md before:-z-10 before:transition-transform before:duration-300 before:scale-y-0 before:origin-top group-[.scroll]/body:before:scale-y-100 group-[.mobile-menu]/body:before:scale-y-100 group-[.mobile-menu]/body:before:border-none"
 >
-  <div class="container m-auto flex items-center">
+  <div class="container m-auto flex justify-between items-center">
     <!-- LOGO -->
-    <div class="basis-1/3 relative flex">
+    <div class="lg:basis-1/3 relative flex">
       <a href="/" aria-label="Zpět na domovskou stránku">
         <img
           class="~h-14/16 w-auto transition-opacity duration-300 group-[.scroll]/body:opacity-0"
@@ -22,10 +22,10 @@
       <a
         href="/"
         aria-label="Zpět na domovskou stránku"
-        class="absolute p-3 bg-background border-2 border-primary shadow-md rounded-full transition-opacity duration-300 opacity-0 group-[.scroll]/body:opacity-100"
+        class="absolute ~p-2/3 bg-background border-2 border-primary shadow-md rounded-full transition-opacity duration-300 opacity-0 group-[.scroll]/body:opacity-100"
       >
         <img
-          class="~h-24/28 w-auto"
+          class="~h-20/28 w-auto"
           src="/assets/svgs/TS_Ka-logo_vertical_white.svg"
           alt="Logo - Taneční studio Ká"
           width="112"
@@ -38,7 +38,8 @@
     </div>
 
     <!-- NAVIGATION -->
-    <nav class="xl:basis-1/3 flex justify-center">
+    <nav class="lg:basis-1/3 flex justify-center w-full max-lg:absolute max-lg:top-full max-lg:py-6 max-lg:left-0 max-lg:bg-background max-lg:border-b-2 max-lg:border-secondary max-lg:-z-10
+    max-lg:transition-transform max-lg:duration-300 max-lg:origin-top max-lg:scale-y-0 group-[.mobile-menu]/body:max-lg:scale-y-100">
       <ul class="flex max-lg:flex-col ~gap-4/8">
         {% set navPages = collections.all | eleventyNavigation %}
 
@@ -49,7 +50,7 @@
           {% set hasChild = entry.children.length %}
 
           <li
-            class="group/li relative"
+            class="group/li relative flex"
             {%- if hasChild -%}tabindex="0"{%- endif -%}
           >
 
@@ -57,7 +58,7 @@
             {% if hasChild %}
               {# Render the <button> with the active class, dropdown icon and child links #}
               <button
-                  class="dropdown-button"
+                  class="dropdown-button flex items-center gap-1.5 ~p-2/4 whitespace-nowrap transition-colors duration-300 text-stone-200 hover:text-white"
                   aria-expanded="false"
                   aria-controls="dropdown-{{ entry.key }}"
                   aria-label="dropdown-{{ entry.key }}"
@@ -66,25 +67,63 @@
                 <span>{{ entry.key }}</span>
 
                 <!-- ICON -->
-                <svg width="20" height="20" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
-                  <path d="M8.99992 9.70969L12.4499 6.25969L13.2402 7.05L8.99992 11.2903L4.75961 7.05L5.54992 6.25969L8.99992 9.70969Z"/>
+                <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor" class="mt-0.5" viewBox="0 0 16 16">
+                  <path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
                 </svg>
               </button>
 
               {# Dropdowns have another ul/li set up within the parent li, which gets rendered in the same way as a normal link #}
-              <div>
-                <ul id="dropdown-{{ entry.key }}">
+              <div class="absolute top-[calc(100%-0.25rem)] left-0 p-4 transition-transform duration-300 scale-y-0 origin-top group-hover/li:scale-y-100">
+                <ul id="dropdown-{{ entry.key }}" class="flex flex-col bg-background/80 border-b-2 border-secondary">
                   {% for child in entry.children %}
-                    <li class="drop-li inline-block">
-                      <a 
-                        href="{{ child.url }}"
-                        class="li-link inline-block whitespace-nowrap p-2 text-sm uppercase
-                        {%- if child.url == page.url %} text-black dark:text-white
-                        {%- else %} text-gray-800 hover:text-black dark:text-gray-200 dark:hover:text-white{% endif %}"
-                        {%- if child.url == page.url -%}aria-current="page"{%- endif -%}
-                      >
-                        {{ child.key }}
-                      </a>
+                    {# Define a hasChild variable to make it easier to test what navigation items are have child dropdown pages #}
+                    {% set hasSubchild = child.children.length %}
+
+                    <li class="drop-li group/subli inline-block">
+                      {% if hasSubchild %}
+                        {# Render the <button> with the active class, dropdown icon and child links #}
+                        <button
+                          class="dropdown-button flex items-center gap-1.5 py-3 px-4 whitespace-nowrap transition-colors duration-300 text-stone-200 hover:text-white hover:bg-background peer-hover:bg-background group-hover/subli:bg-background"
+                          aria-expanded="false"
+                          aria-controls="dropdown-{{ child.key }}"
+                          aria-label="dropdown-{{ child.key }}"
+                          type="button"
+                        >
+                          <span>{{ child.key }}</span>
+
+                          <!-- ICON -->
+                          <svg class="mt-1 transition-transform duration-300 group-hover/subli:-rotate-90" xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor" viewBox="0 0 16 16">
+                            <path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
+                          </svg>
+                        </button>
+
+                        <div class="absolute top-4 left-[calc(100%-1rem)] transition-transform duration-300 scale-x-0 origin-left group-hover/subli:scale-x-100">
+                          <ul id="dropdown-{{ child.key }}" class="flex flex-col bg-background border-b-2 border-secondary">
+                            {% for subchild in child.children %}
+                              <li class="inline-block">
+                                <a
+                                  href="{{ subchild.url }}"
+                                  class="li-link inline-block whitespace-nowrap w-full py-3 px-4 transition-[background-color] duration-300
+                                  {%- if child.url == page.url %} text-white hover:bg-background
+                                  {%- else %} text-stone-200 hover:text-white hover:bg-background{% endif %}"
+                                  {%- if child.url == page.url -%}aria-current="page"{%- endif -%}>
+                                  {{ subchild.key }}
+                                </a>
+                              </li>
+                            {% endfor %}
+                          </ul>
+                        </div>
+                      {% else %}
+                        <a
+                          href="{{ child.url }}"
+                          class="li-link inline-block whitespace-nowrap w-full py-3 px-4 transition-[background-color] duration-300
+                          {%- if child.url == page.url %} text-white hover:bg-background
+                          {%- else %} text-stone-200 hover:text-white hover:bg-background{% endif %}"
+                          {%- if child.url == page.url -%}aria-current="page"{%- endif -%}
+                        >
+                          {{ child.key }}
+                        </a>
+                      {% endif %}
                     </li>
                   {% endfor %}
                 </ul>
@@ -106,7 +145,7 @@
     </nav>
 
     <!-- DARKMODE + CTA -->
-    <div class="basis-1/3 flex justify-end items-center ~gap-4/6">
+    <div class="lg:basis-1/3 flex justify-end items-center ~gap-4/6">
       <!-- DARKMODE BUTTON -->
       <label for="dark-mode-toggle" class="darkmode-container">
         <span class="sr-only">Přepínač tmavého režimu</span>
