--- a/src/assets/css/input.css
+++ b/src/assets/css/input.css
@@ -19,8 +19,16 @@
     @apply py-2 px-8 ~text-base/lg;
   }
 
+  .btn-xl {
+    @apply ~py-2/3 ~px-8/12 ~text-lg/xl;
+  }
+
   .btn-secondary {
     @apply bg-secondary border-accent-secondary before:bg-accent-secondary;
+  }
+
+  .input {
+    @apply bg-stone-100 dark:bg-stone-900 border-stone-300 dark:border-stone-700 ~text-sm/base text-stone-800 dark:text-stone-200 font-normal rounded-xl focus:border-secondary focus:ring-secondary/30;
   }
 }
 
